--- a/esl_portal/esl_app/templates/esl_app/some_test.html
+++ b/esl_portal/esl_app/templates/esl_app/some_test.html
@@ -25,8 +25,8 @@
                     ESL PORTAL
                   </a>
                   <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                      <li><a href="#" class="nav-link px-2 link-dark">О нас</a></li>
-                      <li><a href="#" class="nav-link px-2 link-dark">Контакты</a></li>
+                      <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">О нас</a></li>
+                      <li><a href="{% url 'contacts' %}" class="nav-link px-2 link-dark">Контакты</a></li>
                   </ul>
                   <div class="col-md-3 text-end">
                     <a role="button" class="btn btn-primary" href="{% url 'profile' %}">Профиль</a>
@@ -37,7 +37,6 @@
             </div>
         <div id="test-info">
             {% if some_test %}
-{#                 TODO: Add aspect and level to the description #}
                 <div class="px-4 py-5 my-5 text-center">
                     <h1 class="display-5 fw-bold">{{ some_test.test_name }}</h1>
                     <div class="col-lg-6 mx-auto">
