--- a/esl_portal/esl_app/templates/esl_app/tests.html
+++ b/esl_portal/esl_app/templates/esl_app/tests.html
@@ -18,8 +18,8 @@
               </a>
 
               <ul class="nav col-12 col-md-auto mb-2 justify-content-center mb-md-0">
-                  <li><a href="#" class="nav-link px-2 link-dark">О нас</a></li>
-                  <li><a href="#" class="nav-link px-2 link-dark">Контакты</a></li>
+                  <li><a href="{% url 'about' %}" class="nav-link px-2 link-dark">О нас</a></li>
+                  <li><a href="{% url 'contacts' %}" class="nav-link px-2 link-dark">Контакты</a></li>
               </ul>
 
               <div class="col-md-3 text-end">
