--- a/esl_portal/esl_app/templates/esl_app/some_test.html
+++ b/esl_portal/esl_app/templates/esl_app/some_test.html
@@ -116,10 +116,9 @@
                         $('#completion').append();
                         let form = `<form method="post" class="question-form border border-1 rounded shadow-sm" data-amount="` + data.num_of_answers + `" data-count="` + data.num_of_question + `">{% csrf_token %}<h3 id="question_text" class="ms-4 mt-2 mb-2">` + data.question_text + `</h3>` + choices + `<div class="row"><div class="col-4 align-content-start"><input class="btn btn-primary ms-4" onclick="respond()" id="respond-btn" type="button" value="Ответить"></div>`;
                         let next_btn = `<div class="col-8 d-grid gap-2 d-md-flex justify-content-md-end"><input class="btn btn-primary mb-2" type="button" value="Следующий вопрос" id="next-btn" onclick="next()" disabled="">`;
-                        let prev_btn = `<input class="btn btn-primary mb-2 me-2" type="button" value="Предыдущий вопрос" id="prev-btn" onclick="prev()" disabled=""></div></div>`;
                         let finish_btn = `<div class="d-grid gap-2 mt-2"><input data-is-last="` + data.is_last + `" class="btn btn-light btn-outline-danger" type="button" value="Завершить тестирование" id="finish-btn" onclick="finish()" disabled=""></div></form>`;
 
-                        form = form + next_btn + prev_btn + finish_btn;
+                        form = form + next_btn + finish_btn;
                         $('#completion').append(form);
                     }
                 });
@@ -163,9 +162,6 @@
                             if (!data.is_last) {
                                 $('#next-btn').prop('disabled', false);
                             }
-                            if (data.num_of_question !== 1) {
-                                $('#prev-btn').prop('disabled', false);
-                            }
                             $('#finish-btn').show();
                         }
                         else {
@@ -175,9 +171,6 @@
                             $('#respond-btn').prop('disabled', true);
                             if (!data.is_last) {
                                 $('#next-btn').prop('disabled', false);
-                            }
-                            if (data.num_of_question !== 1) {
-                                $('#prev-btn').prop('disabled', false);
                             }
                             $('#finish-btn').show();
                         }
@@ -219,45 +212,8 @@
                         $('#completion').append();
                         let form = `<form method="post" class="question-form border border-1 rounded shadow-sm" data-amount="` + data.num_of_answers + `" data-count="` + data.num_of_question + `">{% csrf_token %}<h3 id="question_text" class="ms-4 mt-2 mb-2">` + data.question_text + `</h3>` + choices + `<div class="row"><div class="col-4 align-content-start"><input class="btn btn-primary ms-4" onclick="respond()" id="respond-btn" type="button" value="Ответить"></div>`;
                         let next_btn = `<div class="col-8 d-grid gap-2 d-md-flex justify-content-md-end"><input class="btn btn-primary mb-2" type="button" value="Следующий вопрос" id="next-btn" onclick="next()" disabled="">`;
-                        let prev_btn = `<input class="btn btn-primary mb-2 me-2" type="button" value="Предыдущий вопрос" id="prev-btn" onclick="prev()" disabled=""></div></div>`;
                         let finish_btn = `<div class="d-grid gap-2 mt-2"><input data-is-last="` + data.is_last + `" class="btn btn-light btn-outline-danger" type="button" value="Завершить тестирование" id="finish-btn" onclick="finish()" disabled=""></div></form>`;
-                        form = form + next_btn + prev_btn + finish_btn;
-                        $('#completion').append(form);
-                   }
-                });
-            }
-            function prev() {
-                let num_of_question = $('.question-form').attr('data-count');
-                $.ajax({
-                   method: 'GET',
-                   url: '{% url 'previous_question' test_id=some_test.id %}',
-                   data: {
-                       'count': num_of_question
-                   },
-                   success: function (data) {
-                       let choices = '';
-                        if (data.type_of_question === 'Single') {
-                            for (let i = 0; i < data.num_of_answers; i++) {
-                                choices += '<div class="form-check ms-4 mb-2"><input class="answer form-check-input" type="radio" value="' + data.answers[i][0] + '"name="answer" id="answer' + (i+1) + '">' + '\n';
-                                choices += '<label class="form-check-label" for="answer ' + (i+1) + '">' + data.answers[i][0] + '</label></div>';
-                            }
-                        }
-                        else if (data.type_of_question === 'Multiple') {
-                            for (let i = 0; i < data.num_of_answers; i++) {
-                                choices += '<div class="form-check ms-4 mb-2"><input class="answer form-check-input" type="radio" value="' + data.answers[i][0] + '"name="answer" id="answer' + (i+1) + '">' + '\n';
-                                choices += '<label class="form-check-label" for="answer' + (i+1) + '">' + data.answers[i][0] + '</label></div>';
-                            }
-                        }
-                        else {
-                            choices += '<div class="ms-4 mb-2"><label for="answer1" class="form-label">Введите ответ:</label><input type="text" name="answer1" class="answer form-control"></div>';
-                        }
-                        $('#completion').empty();
-                        $('#completion').append();
-                        let form = `<form method="post" class="question-form border border-1 rounded shadow-sm" data-amount="` + data.num_of_answers + `" data-count="` + data.num_of_question + `">{% csrf_token %}<h3 id="question_text" class="ms-4 mt-2 mb-2">` + data.question_text + `</h3>` + choices + `<div class="row"><div class="col-4 align-content-start"><input class="btn btn-primary ms-4" onclick="respond()" id="respond-btn" type="button" value="Ответить"></div>`;
-                        let next_btn = `<div class="col-8 d-grid gap-2 d-md-flex justify-content-md-end"><input class="btn btn-primary mb-2" type="button" value="Следующий вопрос" id="next-btn" onclick="next()" disabled="">`;
-                        let prev_btn = `<input class="btn btn-primary mb-2 me-2" type="button" value="Предыдущий вопрос" id="prev-btn" onclick="prev()" disabled=""></div></div>`;
-                        let finish_btn = `<div class="d-grid gap-2 mt-2"><input data-is-last="` + data.is_last + `" class="btn btn-light btn-outline-danger" type="button" value="Завершить тестирование" id="finish-btn" onclick="finish()" disabled=""></div></form>`;
-                        form = form + next_btn + prev_btn + finish_btn;
+                        form = form + next_btn + finish_btn;
                         $('#completion').append(form);
                    }
                 });
