--- a/esl_portal/esl_app/templates/esl_app/tests.html
+++ b/esl_portal/esl_app/templates/esl_app/tests.html
@@ -64,6 +64,7 @@
                                     </div>
                                     <div class="d-flex justify-content-between align-items-center align-self-end">
                                         <a role="button" class="btn btn-sm btn-outline-secondary" href="{% url 'test' test_id=test.id %}">Перейти</a>
+                                        <small class="text-muted">{{ test.level }} {{ test.aspect }}</small>
                                     </div>
                                 </div>
                             </div>
